minikube/k8s_blue_green/deployment_v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-go-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8s-go-app
      version: "1.0"
  template:
    metadata:
      labels:
        app: k8s-go-app
    spec:
      containers:
        - name: k8s-go-app
          image: docker.io/ppdraga/simple_go_app:v1
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080
            - containerPort: 8082
          livenessProbe:
            httpGet:
              path: /__heartbeat__
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /__heartbeat__
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 1
