minikube/k8s_blue_green/service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-go-app-srv
spec:
  selector:
    app: k8s-go-app
    version: "1.0"
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: grpc
      port: 8082
      targetPort: 8082
