minikube/k8s_blue_green/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    ingress.kubernetes.io/rewrite-target: /
  name: k8s-go-app-ing
  labels:
    app: k8s-go-app-ing
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-go-app-srv
                port:
                  number: 8080
